--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <h2>My Portfolio.</h2>
                     <div class="half-width">
                         <div class="left-format">
-                            <a href="http://www.ariellebosshard.com/website-design/" target="_BLANK"> <img src="img/website-one.png" alt="photo1"/></a>
+                            <a href="https://arielle-bosshard.github.io/jubilee-austen-project/" target="_BLANK"> <img src="img/website-one.png" alt="photo1"/></a>
                             <a href="https://arielle-bosshard.github.io/rogue-pickings/" target="_BLANK"> <h3>Rogue Pickings Project</h3></a>
                             <h4>HTML and CSS from Photoshop Design Comp</h4>
                             <p>Easily and quickly converted a designer’s PSD to a webpage precisely and accurately.</p>
@@ -44,7 +44,7 @@
                     </div>
                     <div class="half-width">
                         <div class="right-format">
-                            <h3>Jubilee Austen Project</h3>
+                            <a href="https://arielle-bosshard.github.io/jubilee-austen-project/" target="_BLANK"> <h3>Jubilee Austen Project</h3></a>
                             <h4>HTML5 and CSS Website</h4>
                             <p>Used clean, well-formatted and semantic hand-writen HTML5 to ensure content is easily read, collaborative, trouble-shooted and accessible.<br>My CSS is easy to read and build on. I use lean and fast to load CSS, and ensure I am up-to-date on current best practises.</p>
                             <a href="https://arielle-bosshard.github.io/rogue-pickings/" target="_BLANK"> <img src="img/website-two.png" alt="photo3"/></a>
@@ -68,13 +68,14 @@
                     <h2>Connect.</h2>
                     <div class="third-width">
                         <h3 id="direct">Direct</h3>
-                        <form> 
-                                <label for="name">Name  </label><input type="text" id="name" name="name"><br><br> 
-                                <label for="email">Email  </label><input type="text" id="email" email="email"><br><br>
-                                <label for="message">Message  </label><input type="text" id="message" text="message"><br><br>
-                                <input type="submit" value="Submit"> 
-                            </fieldset> 
-                        </form>
+                        <div class="form-style-8">
+                            <form>
+                              <input type="text" name="field1" placeholder="Full Name" />
+                              <input type="email" name="field2" placeholder="Email" />
+                              <textarea placeholder="Message" onkeyup="adjust_textarea(this)"></textarea>
+                              <input type="button" value="Send Message" />
+                            </form>
+                          </div>
                     </div>
                     <div class="third-width">
                         <h3 id="social">Social</h3>
@@ -87,8 +88,8 @@
                         </ul>
                     </div>
                     <div class="third-width">
-                        <h3 class="address">Contact</h3>
-                        <ul>
+                        <h3 id="connect">Contact</h3>
+                        <ul id="address">
                             <li>Arielle Bosshard</li>
                             <li>M +39 349 626 4917</li>
                             <li><a href="mailto:ariellebosshard@outlook.com"> E ariellebosshard@outlook.com</a></li>
