--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <body>
         <header>
             <div class="full-width" id="title"> 
-                <img src="img/ari-logo.png" alt="Ari Logo" />
+                <img src="img/ari-logo-colour.png" alt="Ari Logo" />
                 <h1>Building Websites<br>brick by brick</h1>
             </div>
             <div class="full-width" id="menu">
-                <img src="img/ari-logo.png" alt="ari logo" />
+                <img src="img/ari-logo-colour.png" alt="ari logo" />
                 <nav>
                     <ul>
                         <li><a href="#portfolio">Portfolio</a></li>
